2004-03-31  Eric Blake  <ebb9@byu.net>

	* src/ast.cpp [JIKES_DEBUG]: Move stream.h include outside of the
	namespace.
	* src/depend.cpp: Formatting.
	(BoxedTypeForPrimitiveType, AddStringConversionDependence): Delete
	- with autoboxing in JSR 201, this information better belongs in
	TypeSymbol.
	* src/semantic.h: Ditto.
	* src/expr.cpp (ReportVariableNotFound): Use NULL, not 0, when we
	mean a pointer.
	(ProcessClassLiteral): Restore class dependence on non-primitive
	types, that Elliott's patch regressed on.
	(ProcessPLUS): Depend on the boxed type.
	(CreateAccessToScopedVariable, ProcessAmbiguousName): Don't allow
	static class to access constant instance variable of enclosing
	class, bug 3536.
	* src/symbol.h (BoxedType, UnboxedType): New methods.
	* src/symbol.cpp: Implement.

2004-03-31  Elliott Hughes  <enh@acm.org>

	* src/expr.cpp: Fix a null-pointer access caused by trying to be too
	clever; all that effort I put into not crashing on valid source, and
	not a thought given to invalid source like "class C{C(){this.c=0;}}".

2004-03-28  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp: Compiling GNU Classpath from CVS and looking at Jikes'
	complaints was a good reminder that we shouldn't warn about hiding of
	the serialVersionUID field; that's the way it's supposed to be used.

2004-03-28  Elliott Hughes  <enh@acm.org>

	* src/init.cpp: Warn about non-static final fields initialized by a
	constant expression; these can be made static to save space in each
	instance.
	* src/error.cpp, src/error.h: The new diagnostic.

2004-03-28  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp: Accept default access for serialVersionUID; it's
	common existing practice.
	* src/error.cpp: Put all the serialization-related warnings
	together in the +Pserial group.

2004-03-28  Elliott Hughes  <enh@acm.org>

	* src/expr.cpp: Fix another assertion compiling Sun's
	JDK 1.4.1 source; don't ask FindInaccessibleType to try with an